0.253 2025-10-13
  [Incompatible Changes]
    * Sorry, Regex#replace method's first argument only receive mutable string type.
    * Sorry, Regex#replace_g method's first argument only receive mutable string type.
    * Sorry, Re#s method's first argument only receive mutable string type.
    
0.252 2025-10-11
  [Internal Changes]
    * Use hash access syntax.
    * Use array access syntax in List.
    * Use a new scope feature.
    
0.251 2025-10-11
  [New Features]
    * Regex#replace, replace_g, Re#s method can receive mutable string type.
  [Requirement Changes]
    * Require SPVM 0.990102.
    
0.250 2025-10-09
  [Internal Changes]
    * Clean up tests.
    
0.249 2025-09-16
  [Requirement Changes]
    * Require SPVM 0.990089.
  [Document and Internal Changes]
    * Remove "object of" from arguments.
  [Incompatible Changes]
    * Rename Match#captures method to cap method, and Match#captures returns an array that has captured elements.
    * Regex::Replacer anon method require $match always.
    
  [Bug Fix]
    * Fix the bug that Match#captures_length returns wrong value.
  [Internal Changes]
    * Improve the logic of constructors.
    
0.248 2025-06-17
  [Requirement Changes]
    * Require SPVM 0.990068.
  [Bug Fix]
    * Fix a bug that match_string used dangling pointer.
0.247 2025-01-31
  [Incompatible Changes]
    * Change the defintion of Regex#match method.
      
      [Before]
      method match : Regex::Match ($string : string, $offset : int = 0, $length : int = -1);
      
      [After]
      method match : Regex::Match ($string_or_buffer : object of string|StringBuffer, $offset_ref : int* = undef, $length : int = -1)
   
    * Remove Regex#match_forward method in favor of match method.
    * Remove Regex#buffer_match method in favor of match method.
    * Remove Regex#buffer_match_forward method in favor of match method.
    * Change the definitions of Regex#replace method.
     
      [Before]